# codex-android

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  SESSION_NOTES.md  TODO.md  Taskfile.yml  hello.py  main.py  pyproject.toml
src/backend/app/: __init__.py  discord_bot.py  main.py
src/backend/app/routers/: __init__.py  sessions.py
src/backend/core/: __init__.py  config.py  session_store.py
src/backend/models/: session.py
src/backend/services/: codex_client.py  session_logger.py
src/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/src/: App.js  App.tsx  styles.css
src/frontend/src/hooks/: useSession.js  useSession.ts
