[project]
name = "codex-android"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.3",
    "fastapi>=0.116.2",
    "orjson>=3.11.3",
    "pydantic-settings>=2.10.1",
    "pynacl>=1.6.0",
    "uvicorn[standard]>=0.36.0",
]

[project.scripts]
run-discord-bot = "backend.app.discord_bot:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
